texts fixed and text-overflow added to resume

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -36,6 +36,9 @@
 
 .about-main-content-item {
     margin-bottom: 28px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .about-main-content-item span {
